tests/cases/function/expand_fail/01_not_async.stderr
error: function must be async
 --> tests/cases/function/expand_fail/01_not_async.rs:6:1
  |
6 | fn func() {}
  | ^^^^^^^^^
