tests/cases/function/expand_fail/01_not_async.rs
#![no_main]

use split_async::split;

#[split]
fn func() {}
